# awssdk-demo

./: Cargo.toml  events.json
configuration/: base.toml  local.toml
scripts/: put-record.sh
src/: batch_write.rs  configuration.rs  dynamo.rs  event.rs  kinesis.rs  logging.rs  main.rs
