[package]
name = "kinesis-dynamo-awssdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
aws-sdk-kinesis = "0.19.0"
aws-types = "0.49.0"
chrono = "0.4.22"
color-eyre = "0.6.2"
config = "0.13.2"
dotenv = "0.15.0"
http = "0.2.8"
tokio = { version = "1.21.2", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
uuid = { version = "1.2.1", features = ["v4"] }
